修复assetbundle读取器的进度显示错误的bug

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /Library
 /Temp
+/.vs/PBCoreForUnity/v14/.suo
+/PBCoreForUnity.Editor.Plugins.csproj
+/PBCoreForUnity.Editor.csproj
+/PBCoreForUnity.Plugins.csproj
+/PBCoreForUnity.csproj
+/PBCoreForUnity.sln
